

export class Country extends AdministrativeArea {


}
