export enum MerchantReturnEnumeration {
  MerchantReturnNotPermitted,
  MerchantReturnUnlimitedWindow,
  MerchantReturnFiniteReturnWindow,
  MerchantReturnUnspecified,
}
