export enum OfferItemCondition {
  DamagedCondition,
  RefurbishedCondition,
  UsedCondition,
  NewCondition,
}
