export enum RefundTypeEnumeration {
  StoreCreditRefund,
  ExchangeRefund,
  FullRefund,
}
