export enum ReturnFeesEnumeration {
  ReturnFeesCustomerResponsibility,
  OriginalShippingFees,
  ReturnShippingFees,
  FreeReturn,
  RestockingFees,
}
