export enum ReturnLabelSourceEnumeration {
  ReturnLabelCustomerResponsibility,
  ReturnLabelDownloadAndPrint,
  ReturnLabelInBox,
}
