export enum ReturnMethodEnumeration {
  ReturnByMail,
  ReturnAtKiosk,
  ReturnInStore,
}
